# InstantPromptBox

./: ARCHITECTURE.md  ARCHITECTURE_JA.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_JA.md  CONTRIBUTING.md  CONTRIBUTING_JA.md  README.md  README_JA.md  pyproject.toml
instant_prompt_box/: __init__.py
instant_prompt_box/examples/: example01.py
instant_prompt_box/prompts/zoltraak/: zoltraak.py  zoltraak_prompt_fix_code.md  zoltraak_prompt_fix_code_smart.md
instant_prompt_box/src/: main.py
instant_prompt_box/src/utils/: file_util.py
instant_prompt_box/test/: test_main.py
