[tool.poetry]
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Software Development",
]
description = "InstantPromptBox"
license = "MIT License"
name = "instant_prompt_box"

readme = "README.md"
repository = "https://github.com/nobu007/InstantPromptBox"
version = "0.0.0"

[tool.poetry.urls]
"Source Code" = "https://github.com/nobu007/InstantPromptBox"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-clarity = "^1.0.1"
pytest-randomly = "^3.15.0"
pytest-split = "^0.9.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.1.5"

[tool.poetry.group.mypy]
optional = false

[tool.poetry.group.mypy.dependencies]
mypy = "^1"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.9.0"]
